# rust-blog-api

./: Cargo.toml  config.yaml
src/: main.rs  routers.rs
src/cache/: blog_cache.rs  mod.rs  user_cache.rs
src/common/: constants.rs  date_format.rs  mod.rs  redis_keys.rs  result.rs
src/conf/: config.rs  db_config.rs  logger_config.rs  mod.rs  redis_config.rs  search_config.rs  smtp_config.rs  token_config.rs  upload_config.rs
src/controller/: admin_controller.rs  blog_controller.rs  category_controller.rs  file_controller.rs  mod.rs  tag_controller.rs  topic_controller.rs  user_controller.rs
src/error/: custom_error.rs
src/middleware/: jwt.rs
src/models/: blogs.rs  category.rs  file.rs  mod.rs  tag.rs  topic.rs  user.rs
src/repository/: admin_repository.rs  blog_repository.rs  category_repository.rs  file_repository.rs  mod.rs  tag_repository.rs  topic_repository.rs  user_repository.rs
src/request/: admin_request.rs  blog_request.rs  email_request.rs  mod.rs  user_request.rs
src/response/: mod.rs  page_info.rs  website_info.rs
src/search/: meilisearch_client.rs  meilisearch_request.rs  meillsearch_response.rs  mod.rs
src/service/: admin_service.rs  blog_service.rs  category_service.rs  file_service.rs  gpt_service.rs  mod.rs  tag_service.rs  topic_service.rs  user_service.rs
