[package]
name = "rust-blog-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.6.4"
actix-multipart = {version = "0.6.1"}
futures = "0.3.29"
actix-web = "4.4.0"
ip2region = "0.1.0"
jsonwebtoken = "9.1.0"
lazy_static = "1.4.0"
lettre = "0.11.1"
log = "0.4.20"
md5 = "0.7.0"
r2d2 = "0.8.10"
r2d2_redis = "0.14.0"
rand = {version = "0.8.5",default-features = false}
regex = {version = "1.10.2",default-features = false}
reqwest = {version = "0.11.22",features = ["json","stream","rustls-tls"],default-features = false}
serde = "1.0.190"
serde_json = "1.0.108"
serde_yaml = "0.9.27"
simplelog = "0.12.1"
sqlx = {version = "0.7.2",features = ["chrono","postgres","runtime-async-std-native-tls"]}
uuid = {version = "1.5.0",features = ["v4"]}